--- a/ch03/03_pyalgo.ipynb
+++ b/ch03/03_pyalgo.ipynb
@@ -829,9 +829,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'q' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-1-bb5030dbd46b>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m data = q.get('FSE/SAP_X', start_date='2018-1-1',\n\u001B[0m\u001B[1;32m      2\u001B[0m              \u001B[0mend_date\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m'2020-05-01'\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m              api_key=config['quandl']['api_key'])\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'q' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = q.get('FSE/SAP_X', start_date='2018-1-1',\n",
     "             end_date='2020-05-01',\n",
@@ -1909,15 +1921,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 4.11 s, sys: 873 ms, total: 4.99 s\n",
-      "Wall time: 5.02 s\n"
+     "ename": "NameError",
+     "evalue": "name 'generate_sample_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m<timed exec>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'generate_sample_data' is not defined"
      ]
     }
    ],
